--- a/doctor/service.html
+++ b/doctor/service.html
@@ -11,6 +11,20 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link type="image/png" sizes="32x32" rel="icon" href="images/Logos/favicon.png" />
     <title>Services</title>
+    <style>
+         #di_cont{
+    width: 40%;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%,50%);
+  }
+  @media only screen and (max-width: 600px) {
+    #di_cont {
+      width: 60%;
+    }
+  }
+    </style>
 </head>
 
 <body>
