--- a/doctor/service.html
+++ b/doctor/service.html
@@ -189,7 +189,7 @@
                 <!-- Dialog container -->
                 <div id="di_cont" class="bg-white p-6 rounded-lg shadow-xl z-50">
                     <!-- Dialog content -->
-                    <div class="text-lg font-semibold mb-4">Dialog Title</div>
+                    <div class="text-lg font-semibold mb-4"></div>
                     <div class="text-gray-700">
                         <ul id="" class="  bg-blue-600 text-white mt-4 mb-8 rounded">
                             <li>
