--- a/college/about.html
+++ b/college/about.html
@@ -71,9 +71,12 @@
 <body>
     <div class="top_nav p-2">
         <ul class="nav justify-content-end">
-            <li class="px-2">Call</li>
-            <li class="px-2">Whatsapp</li>
-            <li class="px-2">Facebok</li>
+            <li class=""><a class="nav-link color-white" style="color: #fff;" href="tel:+918100040601">Call</a></li>
+            <li class=""><a class="nav-link color-white" style="color: #fff;"
+                    href="https://wa.me/+918100040601">Whatsapp</a></li>
+            <li class=""><a class="nav-link color-white" style="color: #fff;"
+                    href="https://www.facebook.com/profile.php?id=100081674114162&paipv=0&eav=AfZY7Xm_q8oDzcXjiw8pJRJnO0rF7Uwl7iBKgkKQiFIU4RlBK2qs_7e1XrZpQlElSa0">Facebok</a>
+            </li>
         </ul>
     </div>
     <div class="branding">
