--- a/college/about.html
+++ b/college/about.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Bangiyo Gurukul Ashram</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         .top_nav {
             background-color: rgb(10, 90, 250);
@@ -74,9 +77,6 @@
             <li class=""><a class="nav-link color-white" style="color: #fff;" href="tel:+918100040601">Call</a></li>
             <li class=""><a class="nav-link color-white" style="color: #fff;"
                     href="https://wa.me/+918100040601">Whatsapp</a></li>
-            <li class=""><a class="nav-link color-white" style="color: #fff;"
-                    href="https://www.facebook.com/profile.php?id=100081674114162&paipv=0&eav=AfZY7Xm_q8oDzcXjiw8pJRJnO0rF7Uwl7iBKgkKQiFIU4RlBK2qs_7e1XrZpQlElSa0">Facebok</a>
-            </li>
         </ul>
     </div>
     <div class="branding">
@@ -95,7 +95,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link px-4 text-large text-bold" href="index.html">Home</a>
-                    <a class="nav-link px-4 text-large text-bold" href="cource.html">Cources</a>
+                    <a class="nav-link px-4 text-large text-bold" href="cource.html">Courses</a>
                     <a class="nav-link px-4 text-large text-bold active" href="about.html"  aria-current="page">About Us</a>
                     <a class="nav-link px-4 text-large text-bold"
                         href="gallery.html">Gallery</a>
@@ -140,8 +140,8 @@
                 </div>
                 <div class="col-sm-4 p-4">
                     <h3 class="my-3">Contacts links</h3>
-                    <p><b>Email : </b>gurukulfoundation1981@gmail.com</p>
-                    <p><b>Mobile : </b>8100040601, 7980858466, 7047644049</p>
+                    <p><b><i class="fa fa-envelope" aria-hidden="true"></i> </b>gurukulfoundation1981@gmail.com</p>
+                    <p><b><i class="fa fa-phone" aria-hidden="true"></i> </b>8100040601, 7980858466, 7047644049</p>
                 </div>
             </div>
         </div>
