--- a/college/index.html
+++ b/college/index.html
@@ -133,12 +133,9 @@
 <body>
     <div class="top_nav p-2">
         <ul class="nav justify-content-end">
-            <li class=""><a class="nav-link color-white" style="color: #fff;" href="tel:+918100040601">Call</a></li>
+            <li class=""><a class="nav-link color-white" style="color: #fff;" href="tel:+918100040601">Call now</a></li>
             <li class=""><a class="nav-link color-white" style="color: #fff;"
                     href="https://wa.me/+918100040601">Whatsapp</a></li>
-            <li class=""><a class="nav-link color-white" style="color: #fff;"
-                    href="https://www.facebook.com/profile.php?id=100081674114162&paipv=0&eav=AfZY7Xm_q8oDzcXjiw8pJRJnO0rF7Uwl7iBKgkKQiFIU4RlBK2qs_7e1XrZpQlElSa0">Facebok</a>
-            </li>
         </ul>
     </div>
     <div class="branding">
@@ -157,7 +154,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active px-4 text-large text-bold" aria-current="page" href="index.html">Home</a>
-                    <a class="nav-link px-4 text-large text-bold" href="cource.html">Cources</a>
+                    <a class="nav-link px-4 text-large text-bold" href="cource.html">Courses</a>
                     <a class="nav-link px-4 text-large text-bold" href="about.html">About Us</a>
                     <a class="nav-link px-4 text-large text-bold" href="gallery.html">Gallery</a>
                 </div>
@@ -264,6 +261,60 @@
                     </div>
                 </div>
             </div>
+
+            <br><br>
+            <div class="cource_head_bar">
+                <h2>Our courses</h2>
+                <div class="row">
+                    <div class="col-sm-4 cource_bars">
+                        <h4>B.Ed (2 Years)</h4>
+                        <p class="text-center my-3"><b>QUALIFICATION : </b>Graduation with 45% marks (SC/ST) & 50% marks (Gen) </p>
+                    </div>
+                    <div class="col-sm-4 cource_bars">
+                        <h4>D.El.Ed. (2 Years)</h4>
+                        <p class="text-center my-3"><b>QUALIFICATION : </b>HS with 45% marks (SC/ST) & 50% marks (Gen) </p>
+                    </div>
+                    <div class="col-sm-4 cource_bars">
+                        <a href="cource.html" class="nav-link"><h4>Explore more courses</h4></a>
+                    </div>
+                    <!--<div class="col-sm-4 cource_bars">
+                        <h4>B.Tech</h4>
+                    </div>
+                    <div class="col-sm-4 cource_bars">
+                        <h4>B.Tech</h4>
+                    </div>
+                    <div class="col-sm-4 cource_bars">
+                        <h4>B.Tech</h4>
+                    </div> -->
+                </div>
+            </div>
+
+            <div class="container">
+                <br><br>
+                <h2>Joy full campus</h2>
+                <div class="row">
+                    <div class="col-sm-4 p-2">
+                        <img height="100%" width="100%" src="images/img_1.jpeg" alt="smaple_image">
+                    </div>
+                    <div class="col-sm-4 p-2">
+                        <img height="100%" width="100%" src="images/ashram.jpg" alt="smaple_image">
+                    </div>
+                    <div class="col-sm-4 p-2">
+                        <img height="100%" width="100%" src="images/ashram1.jpg" alt="smaple_image">
+                    </div>
+                    <div class="col-sm-4 p-2">
+                        <img height="100%" width="100%" src="images/img_1.jpeg" alt="smaple_image">
+                    </div>
+                    <div class="col-sm-4 p-2">
+                        <img height="100%" width="100%" src="images/ashram.jpg" alt="smaple_image">
+                    </div>
+                    <div class="col-sm-4 p-2">
+                        <img height="100%" width="100%" src="images/ashram1.jpg" alt="smaple_image">
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
     <footer class="bg-dark text-white">
@@ -284,8 +335,8 @@
                 </div>
                 <div class="col-sm-4 p-4">
                     <h3 class="my-3">Contacts links</h3>
-                    <p><b>Email : </b>gurukulfoundation1981@gmail.com</p>
-                    <p><b>Mobile : </b>8100040601, 7980858466, 7047644049</p>
+                    <p><b><i class="fa fa-envelope" aria-hidden="true"></i> </b>gurukulfoundation1981@gmail.com</p>
+                    <p><b><i class="fa fa-phone" aria-hidden="true"></i> </b>8100040601, 7980858466, 7047644049</p>
                 </div>
             </div>
         </div>
