--- a/college/cource.html
+++ b/college/cource.html
@@ -41,7 +41,7 @@
         }
 
         .cource_head_bar h2 {
-            background-color: blue;
+            background-color: #0074d9;
             text-align: center;
             font-weight: bold;
             color: #fff;
