--- a/college/index.html
+++ b/college/index.html
@@ -42,13 +42,15 @@
         }
 
         .carousel-item img {
-            height: 620px;
+            background-size: cover;
+            background-position: center;
+            height: 70vh;
         }
 
 
 
         .cource_head_bar h2 {
-            background-color: blue;
+            background-color: #0074d9;
             text-align: center;
             font-weight: bold;
             color: #fff;
@@ -57,6 +59,7 @@
 
         .cource_head_bar .cource_bars {
             display: flex;
+            flex-direction: column;
             align-items: center;
             /* Centers vertically */
             justify-content: center;
