--- a/college/index.html
+++ b/college/index.html
@@ -142,7 +142,7 @@
 </head>
 
 <body>
-    <div class="top_nav p-2" style="background-color: #333;">
+    <div class="top_nav p-2">
     <ul class="nav justify-content-end" style="list-style: none; padding: 0; margin: 0;">
         <li class="nav-item">
             <a class="nav-link px-3 py-2 color-white" style="color: #fff;" href="tel:+918100040601">
