--- a/college/index.html
+++ b/college/index.html
@@ -8,159 +8,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <style>
-        .top_nav {
-            background-color: rgb(10, 90, 250);
-            box-shadow: 2px 0px 5px black;
-            color: #fff;
-            width: 100%;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 999999;
-        }
-
-        .branding {
-            margin-top: 60px;
-            padding: 20px;
-            background-color: rgba(226, 229, 231, 0.449);
-        }
-
-        .branding marquee {
-            color: red;
-            font-weight: bolder;
-        }
-
-        .branding h1 {
-            font-size: 3rem;
-            font-weight: bolder;
-            text-align: center;
-        }
-
-        .carousel-inner {
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .carousel-item img {
-            background-size: cover;
-            background-position: center;
-            height: 70vh;
-        }
-
-
-
-        .cource_head_bar h2 {
-            background-color: #0074d9;
-            text-align: center;
-            font-weight: bold;
-            color: #fff;
-            width: auto;
-            border-radius: 18px;
-        }
-
-
-        .cource_head_bar .cource_bars {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            /* Centers vertically */
-            justify-content: center;
-            /* Centers horizontally */
-            height: 220px;
-            background-color: rgba(0, 106, 255, 0.277);
-            border: 2px solid #fff;
-        }
-
-        .cource_head_bar .row div:nth-child(odd) {
-            background-color: rgba(135, 142, 248, 0.386);
-        }
-
-        .foot_cont {
-            padding: 25px 5px;
-        }
-
-        .chatbox_btn {
-            position: fixed;
-            right: 10px;
-            bottom: 50px;
-        }
-
-        .chatbox {
-            width: 25%;
-            box-shadow: 10px 10px 100px;
-            border-radius: 15px;
-            padding: 15px;
-            position: fixed;
-            right: 8px;
-            bottom: 45px;
-            background-color: #fff;
-            z-index: 99999999;
-            transition: 2s ease-in;
-            display: none;
-            text-wrap: nowrap;
-        }
-
-        .chat-header {
-            display: flex;
-        }
-
-        .chat-title {
-            margin: 5px 0px;
-        }
-
-        .chat-header button {
-            margin: 5px;
-            margin-left: 65%;
-            /* justify-content: right; */
-        }
-        .nav-link:hover {
-    background-color: #555;
-    color: #fff;
-        }
-
-        @media only screen and (max-width: 600px) {
-            .carousel-item img {
-                height: 220px;
-            }
-
-            .branding h1 {
-                font-size: 2rem;
-                font-weight: bolder;
-                text-align: center;
-            }
-
-            .chatbox {
-                width: 80%;
-                text-wrap: nowrap;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="top_nav p-2">
-    <ul class="nav justify-content-end" style="list-style: none; padding: 0; margin: 0;">
-        <li class="nav-item">
-            <a class="nav-link px-3 py-2 color-white" style="color: #fff;" href="tel:+918100040601">
-                <span class="material-symbols-outlined" style="vertical-align: middle;">
-                    call
-                </span>
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link px-3 py-2 color-white" style="color: #fff;" href="https://wa.me/+918100040601">
-                <svg style="margin-bottom: 1px; vertical-align: middle;" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" viewBox="0 0 24 24">
-                    <path fill="currentColor" d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91c0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21c5.46 0 9.91-4.45 9.91-9.91c0-2.65-1.03-5.14-2.9-7.01A9.82 9.82 0 0 0 12.04 2m.01 1.67c2.2 0 4.26.86 5.82 2.42a8.23 8.23 0 0 1 2.41 5.83c0 4.54-3.7 8.23-8.24 8.23c-1.48 0-2.93-.39-4.19-1.15l-.3-.17l-3.12.82l.83-3.04l-.2-.32a8.2 8.2 0 0 1-1.26-4.38c.01-4.54 3.7-8.24 8.25-8.24M8.53 7.33c-.16 0-.43.06-.66.31c-.22.25-.87.86-.87 2.07c0 1.22.89 2.39 1 2.56c.14.17 1.76 2.67 4.25 3.73c.59.27 1.05.42 1.41.53c.59.19 1.13.16 1.56.1c.48-.07 1.46-.6 1.67-1.18s.21-1.07.15-1.18c-.07-.1-.23-.16-.48-.27c-.25-.14-1.47-.74-1.69-.82c-.23-.08-.37-.12-.56.12c-.16.25-.64.81-.78.97c-.15.17-.29.19-.53.07c-.26-.13-1.06-.39-2-1.23c-.74-.66-1.23-1.47-1.38-1.72c-.12-.24-.01-.39.11-.5c.11-.11.27-.29.37-.44c.13-.14.17-.25.25-.41c.08-.17.04-.31-.02-.43c-.06-.11-.56-1.35-.77-1.84c-.2-.48-.4-.42-.56-.43c-.14 0-.3-.01-.47-.01"/>
-                </svg>
-            </a>
-        </li>
-    </ul>
-</div>
-
+    <div class="top_nav p-1">
+        <ul class="nav justify-content-end">
+            <li class="mx-2">Call now: <a href="tel:+918100040601">918100040601</a></li>
+            <li class="mx-2">Whatsapp : <a href="https://wa.me/+918100040601">8100040601</a></li>
+        </ul>
+    </div>
     <div class="branding">
         <h1>Bangiyo Gurukul Ashram</h1>
         <marquee behavior="" direction="horizontally">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -169,14 +28,14 @@
     </div>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <img src="images/logo.jpg" height="65px" width="65px" alt="logo">
+            <img src="images/logo.png" height="65px" width="65px" alt="logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active px-4 text-large text-bold" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active px-4 text-large text-bolder" aria-current="page" href="index.html">Home</a>
                     <a class="nav-link px-4 text-large text-bold" href="cource.html">Courses</a>
                     <a class="nav-link px-4 text-large text-bold" href="about.html">About Us</a>
                     <a class="nav-link px-4 text-large text-bold" href="gallery.html">Gallery</a>
@@ -201,46 +60,15 @@
         </div>
     </div>
     <div class="container p-4 my-4">
-        <h1 class="text-center my-3">About Bangiyo Gurukul Ashram</h1>
+        <section class="main d-flex align-items-center justify-content-center">
+            <h1 class="text-center my-3">About Bangiyo Gurukul Ashram</h1>
         <p class="text-center my-4">Welcome to Bangiyo Gurukul Ashram, where we are dedicated to shaping the future of
             education. Established with a vision to empower educators and transform learning experiences, we offer
             comprehensive programs in Bachelor of Education (B.Ed) and Diploma in Elementary Education (D.El.Ed).
             <span><a href="about.html">Read More</a></span>
         </p>
-
-
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14718.466131133018!2d88.4683646!3d22.7424901!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f899e49edf9a81%3A0x3df5f5ecf293629!2sBangiyo%20Gurukul%20Ashram!5e0!3m2!1sen!2sin!4v1716131447057!5m2!1sen!2sin"
-            width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-
-        <button id="chat_btn" class="btn btn-primary chatbox_btn"><i class="fa fa-commenting"
-                aria-hidden="true"></i></button>
-        <div class="chatbox" id="chat-box">
-            <div class="chat-header">
-                <h5 class="chat-title" id="">Chat box</h5>
-                <button type="button ml-4" onclick="cloe_chat()" class="btn-close" data-bs-dismiss="modal"
-                    aria-label="Close"></button>
-            </div>
-            <hr>
-            <div class="chat-body">
-                <form>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="exampleInputPassword1">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Mobile number</label>
-                        <input type="text" class="form-control" id="exampleInputPassword1">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
-        </div>
-
+        <!-- apply_section -->
         <div class="apply_section py-4">
-            <h2 class="text-center my-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h2>
             <div class="container text-center">
                 <button class="apply_btn btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Apply Now
@@ -287,6 +115,37 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+
+       
+
+
+        <button id="chat_btn" class="btn btn-primary chatbox_btn"><i class="fa fa-commenting"
+                aria-hidden="true"></i></button>
+        <div class="chatbox" id="chat-box">
+            <div class="chat-header">
+                <h5 class="chat-title" id="">Chat box</h5>
+                <button type="button ml-4" onclick="cloe_chat()" class="btn-close" data-bs-dismiss="modal"
+                    aria-label="Close"></button>
+            </div>
+            <hr>
+            <div class="chat-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Mobile number</label>
+                        <input type="text" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
+
+        
 
             <br><br>
             <div class="cource_head_bar">
@@ -294,14 +153,18 @@
                 <div class="row">
                     <div class="col-sm-4 cource_bars">
                         <h4>B.Ed (2 Years)</h4>
-                        <p class="text-center my-3"><b>QUALIFICATION : </b>Graduation with 45% marks (SC/ST) & 50% marks (Gen) </p>
+                        <p class="text-center my-3"><b>QUALIFICATION : </b>Graduation with 45% marks (SC/ST) & 50% marks
+                            (Gen) </p>
                     </div>
                     <div class="col-sm-4 cource_bars">
                         <h4>D.El.Ed. (2 Years)</h4>
-                        <p class="text-center my-3"><b>QUALIFICATION : </b>HS with 45% marks (SC/ST) & 50% marks (Gen) </p>
+                        <p class="text-center my-3"><b>QUALIFICATION : </b>HS with 45% marks (SC/ST) & 50% marks (Gen)
+                        </p>
                     </div>
                     <div class="col-sm-4 cource_bars">
-                        <a href="cource.html" class="nav-link"><h4>Explore more courses</h4></a>
+                        <a href="cource.html" class="nav-link">
+                            <h4>Explore more courses</h4>
+                        </a>
                     </div>
                     <!--<div class="col-sm-4 cource_bars">
                         <h4>B.Tech</h4>
@@ -319,25 +182,81 @@
                 <br><br>
                 <h2>Joy full campus</h2>
                 <div class="row">
-                    <div class="col-sm-4 p-2">
-                        <img height="100%" width="100%" src="images/img_1.jpeg" alt="smaple_image">
+                    <div class="col-sm-4 p-2 image-container">
+                        <img class="image" height="100%" width="100%" src="images/img_1.jpeg" alt="smaple_image">
+                        <div class="details">
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt nemo facilis
+                                laboriosam?
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-sm-4 p-2">
-                        <img height="100%" width="100%" src="images/ashram.jpg" alt="smaple_image">
+
+                    <div class="col-sm-4 p-2 image-container">
+                        <img class="image" height="100%" width="100%" src="images/ashram.jpg" alt="smaple_image">
+                        <div class="details">
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt nemo facilis
+                                laboriosam?
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-sm-4 p-2">
-                        <img height="100%" width="100%" src="images/ashram1.jpg" alt="smaple_image">
+
+                    <div class="col-sm-4 p-2 image-container">
+                        <img class="image" height="100%" width="100%" src="images/ashram1.jpg" alt="smaple_image">
+                        <div class="details">
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt nemo facilis
+                                laboriosam?
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-sm-4 p-2">
-                        <img height="100%" width="100%" src="images/img_1.jpeg" alt="smaple_image">
+                    <div class="col-sm-4 p-2 image-container">
+                        <img class="image" height="100%" width="100%" src="images/img_1.jpeg" alt="smaple_image">
+                        <div class="details">
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt nemo facilis
+                                laboriosam?
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-sm-4 p-2">
-                        <img height="100%" width="100%" src="images/ashram.jpg" alt="smaple_image">
+
+                    <div class="col-sm-4 p-2 image-container">
+                        <img class="image" height="100%" width="100%" src="images/ashram.jpg" alt="smaple_image">
+                        <div class="details">
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt nemo facilis
+                                laboriosam?
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-sm-4 p-2">
-                        <img height="100%" width="100%" src="images/ashram1.jpg" alt="smaple_image">
+
+                    <div class="col-sm-4 p-2 image-container">
+                        <img class="image" height="100%" width="100%" src="images/ashram1.jpg" alt="smaple_image">
+                        <div class="details">
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt nemo facilis
+                                laboriosam?
+                            </p>
+                        </div>
                     </div>
+
                 </div>
+
+                <br><br>
+
+                <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14718.466131133018!2d88.4683646!3d22.7424901!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f899e49edf9a81%3A0x3df5f5ecf293629!2sBangiyo%20Gurukul%20Ashram!5e0!3m2!1sen!2sin!4v1716131447057!5m2!1sen!2sin"
+                width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
             </div>
 
 
@@ -361,10 +280,14 @@
                 </div>
                 <div class="col-sm-4 p-4">
                     <h3 class="my-3">Contacts links</h3>
-                    <p><b><i class="fa fa-envelope" aria-hidden="true"></i> </b>gurukulfoundation1981@gmail.com</p>
-                    <p><b><i class="fa fa-phone" aria-hidden="true"></i> </b>8100040601, 7980858466, 7047644049</p>
+                    <p><b><i class="fa fa-envelope" aria-hidden="true"></i></b> gurukulfoundation1981@gmail.com</p>
+                    <p><b><i class="fa fa-phone" aria-hidden="true"></i></b> 8100040601</p>
+                    <p><b><i class="fa fa-phone" aria-hidden="true"></i></b> 7980858466</p>
+                    <p><b><i class="fa fa-phone" aria-hidden="true"></i></b> 7047644049</p>
                 </div>
             </div>
+
+            <p class="text-center my-4">© All Copyright 2024 by Bangiyo Gurukul Ashram | Wbsite design by AniTerminal</p>
         </div>
     </footer>
     <script>
