--- a/college/about.html
+++ b/college/about.html
@@ -40,6 +40,7 @@
                     <a class="nav-link px-4 text-large text-bold" href="index.html">Home</a>
                     <a class="nav-link px-4 text-large text-bold" href="cource.html">Courses</a>
                     <a class="nav-link px-4 text-large text-bold active" href="about.html"  aria-current="page">About Us</a>
+                    <a class="nav-link px-4 text-large text-bold" href="contactus.html">Contact Us</a>
                     <a class="nav-link px-4 text-large text-bold"
                         href="gallery.html">Gallery</a>
                 </div>
