--- a/college/cource.html
+++ b/college/cource.html
@@ -42,6 +42,7 @@
                     <a class="nav-link px-4 text-large text-bold active" aria-current="page"
                         href="cource.html">Courses</a>
                     <a class="nav-link px-4 text-large text-bold" href="about.html">About Us</a>
+                    <a class="nav-link px-4 text-large text-bold" href="contactus.html">Contact Us</a>
                     <a class="nav-link px-4 text-large text-bold" href="gallery.html">Gallery</a>
                 </div>
             </div>
