--- a/college/index.html
+++ b/college/index.html
@@ -38,6 +38,7 @@
                     <a class="nav-link active px-4 text-large text-bolder" aria-current="page" href="index.html">Home</a>
                     <a class="nav-link px-4 text-large text-bold" href="cource.html">Courses</a>
                     <a class="nav-link px-4 text-large text-bold" href="about.html">About Us</a>
+                    <a class="nav-link px-4 text-large text-bold" href="contactus.html">Contact Us</a>
                     <a class="nav-link px-4 text-large text-bold" href="gallery.html">Gallery</a>
                 </div>
                 <button class="apply_btn btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -287,7 +288,7 @@
                 </div>
             </div>
 
-            <p class="text-center my-4">© All Copyright 2024 by Bangiyo Gurukul Ashram | Wbsite design by AniTerminal</p>
+            <p class="text-center my-4">© All Copyright 2024 by Bangiyo Gurukul Ashram | Website design by AniTerminal</p>
         </div>
     </footer>
     <script>
