--- a/college/gallery.html
+++ b/college/gallery.html
@@ -40,6 +40,7 @@
                     <a class="nav-link px-4 text-large text-bold"  href="index.html">Home</a>
                     <a class="nav-link px-4 text-large text-bold" href="cource.html">Courses</a>
                     <a class="nav-link px-4 text-large text-bold" href="about.html">About Us</a>
+                    <a class="nav-link px-4 text-large text-bold" href="contactus.html">Contact Us</a>
                     <a class="nav-link active px-4 text-large text-bold" aria-current="page" href="gallery.html">Gallery</a>
                 </div>
             </div>
