--- a/gurukul/contactus.html
+++ b/gurukul/contactus.html
@@ -24,7 +24,7 @@
         <br>
         <p><b>Please Wait</b></p>
     </div>
-    
+
     <section class="upper_nav">
         <div class="wraper_ele d-flex bg_primary ">
             <p class="px-3 my-2 "><span class="th_text">Call US : </span> +91 9999999999</p>
@@ -53,6 +53,10 @@
 
                     <li class="nav-item">
                         <a class="nav-link" href="contactus.html">Contact Us</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="cources.html">Cources</a>
                     </li>
 
                     <li class="nav-item">
