--- a/gurukul/aboutus.html
+++ b/gurukul/aboutus.html
@@ -55,6 +55,10 @@
                     </li>
 
                     <li class="nav-item">
+                        <a class="nav-link" href="cources.html">Cources</a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
                 </ul>
