--- a/gurukul/cources.html
+++ b/gurukul/cources.html
@@ -56,6 +56,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contactus.html">Contact Us</a>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="cources.html">Cources</a>
                     </li>
@@ -96,29 +97,39 @@
     </section>
 
 
-    <section class="mt-4 my-4" data-aos="fade-up">
-        <h2 class="gallery-heading mt-3">Our Gallery</h2>
-        <div class="container p-4 my-3">
-            <div class="gallery-container">
-                <div class="gallery-item" data-aos="zoom-in">
-                    <img src="https://via.placeholder.com/300" alt="Gallery Image 1">
-                    <div class="overlay">Image 1 Description</div>
+    <section class="courses-section" data-aos="fade-up">
+        <div class="container">
+            <h2 class="courses-heading">Our Courses</h2>
+            <div class="row">
+                <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="card course-card">
+                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Course 1">
+                        <div class="card-body course-body">
+                            <h5 class="course-title">Course Title 1</h5>
+                            <p class="course-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque efficitur sapien non scelerisque vehicula.</p>
+                            <a href="#" class="course-btn th_buuton">Learn More</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
-                    <img src="https://via.placeholder.com/300" alt="Gallery Image 2">
-                    <div class="overlay">Image 2 Description</div>
+                <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="card course-card">
+                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Course 2">
+                        <div class="card-body course-body">
+                            <h5 class="course-title">Course Title 2</h5>
+                            <p class="course-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque efficitur sapien non scelerisque vehicula.</p>
+                            <a href="#" class="course-btn">Learn More</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
-                    <img src="https://via.placeholder.com/300" alt="Gallery Image 3">
-                    <div class="overlay">Image 3 Description</div>
-                </div>
-                <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
-                    <img src="https://via.placeholder.com/300" alt="Gallery Image 4">
-                    <div class="overlay">Image 4 Description</div>
-                </div>
-                <div class="gallery-item" data-aos="zoom-in" data-aos-delay="400">
-                    <img src="https://via.placeholder.com/300" alt="Gallery Image 5">
-                    <div class="overlay">Image 5 Description</div>
+                <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="card course-card">
+                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Course 3">
+                        <div class="card-body course-body">
+                            <h5 class="course-title">Course Title 3</h5>
+                            <p class="course-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque efficitur sapien non scelerisque vehicula.</p>
+                            <a href="#" class="course-btn">Learn More</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
