--- a/gurukul/index.html
+++ b/gurukul/index.html
@@ -58,8 +58,13 @@
                         </li>
 
                         <li class="nav-item">
+                            <a class="nav-link" href="cources.html">Cources</a>
+                        </li>
+
+                        <li class="nav-item">
                             <a class="nav-link" href="gallery.html">Gallery</a>
                         </li>
+
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
