--- a/gurukul/index.html
+++ b/gurukul/index.html
@@ -266,7 +266,7 @@
         </section>
 
 
-        <section class="mt-4 my-4" data-aos="fade-down-left">
+        <section class="mt-4 my-4" data-aos="fade-up">
             <h2 class="blog_heading mt-3">Small Blogs</h2>
             <div class="container p-4 my-3">
                 <div class="line"></div>
